--- a/templates/index.html
+++ b/templates/index.html
@@ -3,138 +3,60 @@
   <title>OpenAI Quickstart</title>
   <link
     rel="shortcut icon"
-    href="{{ url_for('static', filename='dog.png') }}"
+    href="{{ url_for('static', filename='mirzakhani.jpg') }}"
   />
   <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
 </head>
+
 <body>
-<section class="msger">
-  <header class="msger-header">
-    <div class="msger-header-title">
-      <i class="fas fa-comment-alt"></i> SimpleChat
-    </div>
-    <div class="msger-header-options">
-      <span><i class="fas fa-cog"></i></span>
-    </div>
-  </header>
-
-  <main class="msger-chat">
-    <div class="msg left-msg">
-      <div
-       class="msg-img"
-       style="background-image: url(https://image.flaticon.com/icons/svg/327/327779.svg)"
-      ></div>
-
-      <div class="msg-bubble">
-        <div class="msg-info">
-          <div class="msg-info-name">BOT</div>
-          <div class="msg-info-time">12:45</div>
-        </div>
-
-        <div class="msg-text">
-          {% if result %}
-          <div class="result">{{ result }}</div>
-          {% endif %}
-        </div>
-      </div>
-    </div>
-
-    <div class="msg right-msg">
-      <div
-       class="msg-img"
-       style="background-image: url(https://image.flaticon.com/icons/svg/145/145867.svg)"
-      ></div>
-
-      <div class="msg-bubble">
-        <div class="msg-info">
-          <div class="msg-info-name">Sajad</div>
-          <div class="msg-info-time">12:46</div>
-        </div>
-
-        <div class="msg-text">
-          {% if message %}
-            <div class="message">{{ message }}</div>
-            {% endif %}
-        </div>
-      </div>
-    </div>
-  </main>
-
-  <form class="msger-inputarea">
-    <input type="text" name="question" class="msger-input" placeholder="Enter your question...">
-    <button type="submit" class="msger-send-btn">Ask</button>
+  <img src="{{ url_for('static', filename='mirzakhani.jpg') }}" width="150" />
+  <h3>Ask me everything</h3>
+  <form action="/" method="post">
+    <input type="text" name="question" placeholder="Ask a question" required />
+    <input type="submit" value="Ask" />
   </form>
-</section>
-<script>
-  const msgerForm = get(".msger-inputarea");
-const msgerInput = get(".msger-input");
-const msgerChat = get(".msger-chat");
-
-// Icons made by Freepik from www.flaticon.com
-const BOT_IMG = "https://image.flaticon.com/icons/svg/327/327779.svg";
-const PERSON_IMG = "https://image.flaticon.com/icons/svg/145/145867.svg";
-const BOT_NAME = "MirzakhaniBot";
-const PERSON_NAME = "Me";
-
-msgerForm.addEventListener("submit", event => {
-  event.preventDefault();
-
-  const msgText = msgerInput.value;
-  if (!msgText) return;
-
-  appendMessage(PERSON_NAME, PERSON_IMG, "right", msgText);
-  msgerInput.value = "";
-
-  botResponse();
-});
-
-function appendMessage(name, img, side, text) {
-  //   Simple solution for small apps
-  const msgHTML = `
-    <div class="msg ${side}-msg">
-      <div class="msg-img" style="background-image: url(${img})"></div>
-
-      <div class="msg-bubble">
-        <div class="msg-info">
-          <div class="msg-info-name">${name}</div>
-          <div class="msg-info-time">${formatDate(new Date())}</div>
-        </div>
-
-        <div class="msg-text">${text}</div>
-      </div>
+  {% if result %}
+  <div class="card border-0 result">
+    <div class="card-header border-0">
+      <h5 class="card-title">Answer</h5>
     </div>
-  `;
+    <div class="card-body">
+      <p class="card-text">{{ result }}</p>
+    </div>
+  </div>
+  {% endif %}
+  <br/>
+  <br/>
+  <hr/>
+  <hr/>
 
-  msgerChat.insertAdjacentHTML("beforeend", msgHTML);
-  msgerChat.scrollTop += 500;
-}
-
-function botResponse() {
-  const msgText = {{ result|tojson }};
-  const delay = msgText.split(" ").length * 100;
-
-  setTimeout(() => {
-    appendMessage(BOT_NAME, BOT_IMG, "left", msgText);
-  }, delay);
-}
-
-// Utils
-function get(selector, root = document) {
-  return root.querySelector(selector);
-}
-
-function formatDate(date) {
-  const h = "0" + date.getHours();
-  const m = "0" + date.getMinutes();
-
-  return `${h.slice(-2)}:${m.slice(-2)}`;
-}
-
-function random(min, max) {
-  return Math.floor(Math.random() * (max - min) + min);
-}
-
-</script>
+      <div class="card text-center border-0">
+        <div>
+          <h3 class="card-header border-0">Previous Answers</h3>
+        </div>
+        <div class="card-body">
+          <div class="row">
+            {% for elt in all_answers %}
+              <!-- If all_answers is empty -->
+              {% if not all_answers %}
+                <div class="col col-12 card card-inner bg-danger">
+                  <h5 class="card-header border-0">No previous answers</h5>
+                </div>
+              {% endif %}
+              <div class="col col-12 card card-inner bg-green">
+                <h5 class="card-header border-0">{{ elt.question }}</h5>
+                <div class="card-body border-0">
+                  <p class="card-text text-left">{{ elt.answer }}</p>
+                </div>
+                <div class="card-footer text-muted">
+                  {{ elt.created_at|time_ago }} ago
+                </div>
+              </div>
+            {% endfor %}
+          </div>
+        </div>
+    </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 </body>
-
-
